add endpoint that returns headers
